Hide search results when search box is inactive

This prevents ChromeVox from reading a hierarchy of inactive results.

Bug: 910348
Change-Id: I393c7a347c63393890ed84b81647828ccc8f547d
Reviewed-on: https://chromium-review.googlesource.com/c/1369127
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#615712}
Former-commit-id: af66d90f64eef76f99adb123a9c563ca2dc3ee58